--- a/MenglolitaHost/AboutBox1.resx
+++ b/MenglolitaHost/AboutBox1.resx
@@ -845,8 +845,15 @@
 1.6.0 final版本
 1.一个大版本的更新
 2.尝试修正某些情况下出现请求超时的问题
-3,UI的调整
-4.程序启动速度的优化</value>
+3.UI的调整
+4.程序启动速度的优化
+
+1.6.0 OCD版本
+1.移除了之前未完成的模块
+2.提升了程序在win7和win10的工作效率
+3.重新修改自动升级的逻辑（github在抽风的情况下建议不要用。。。）
+4.修正文字的错误&amp;小细节调整
+PS：OCD--强迫症</value>
   </data>
   <data name="label2.Text" xml:space="preserve">
     <value>感谢所有的hosts开源项目
