--- a/MenglolitaHost/AboutBox1.resx
+++ b/MenglolitaHost/AboutBox1.resx
@@ -872,6 +872,21 @@ PS：OCD--强迫症
 1.修正设置中某些情况下不生效的问题
 2.程序的无用代码优化
 
+1.6.5 OCD版本
+1.尝试修复某些系统修改hosts权限不够的问题
+2.加入2个待开放的选项
+3.程序体积的优化并解决一些问题
+4.兼容win10创意者更新
+
+1.6.6 OCD版本
+1.修正程序可能会导致hosts文件消失的问题
+
+1.6.7 OCD版本
+1.修正一些可能出错的bug
+2.加入了一个很丑的引导界面
+3.追加了一些说明
+4.加入了一些纯净的DNS
+
 2.0 Alpha版本（开发中）
 1.尝试兼容旧版本
 2.移除旧版本的所有功能
