--- a/MenglolitaHost/readme
+++ b/MenglolitaHost/readme
@@ -3,4 +3,15 @@
 Environment.SystemDirectory：获取system32文件夹的位置（同时可防止因为系统盘为非C盘而报错的问题）
 
 2.DNS更新功能实现原理
+通过AddDNS("***","0.0.0.0","0.0.0.0")添加你已知的DNS
+然后判断DNS是否已替换，如果替换成功就通过NativeMethods.DnsFlushResolverCache清除DNS缓存
+否则报错
 
+3.常见问题解答
+（1）hosts只为读写模式：调用System.IO.File.SetAttributes设置为默认权限
+（2）程序文件被删：通过if（File.Exists）来判断文件是否存在如果不存在则提示无法使用
+（3）hosts文件消失：默认在每次更新会备份一次文件，可通过恢复功能进行恢复操作
+（4）在现有的hosts上添加额外的内容：内置了一个简易编辑器，可一键添加内容
+（5）hosts不能用：打开本软件更新一次即可
+（6）报毒怎么办：别担心，这个程序是个大病毒，会让你电脑爆炸的那种
+（7）我的手机可以运行吗：我家电饭煲完美运行
