--- a/MenglolitaHost/MainForm.resx
+++ b/MenglolitaHost/MainForm.resx
@@ -263,6 +263,19 @@ PS：OCD--强迫症
 3.追加了一些说明
 4.加入了一些纯净的DNS
 
+1.6.8 OCD版本
+1.解决部分情况下更新进度最大值为-1的bug
+2.加入一个Gohosts并提供更新服务
+3.解决已知问题
+
+1.6.9 OCD版本
+1.优化一些函数操作
+2.修正一些很无聊的bug
+
+1.7 OCD版本
+1.YouTube专用hosts 选项的回归
+2.修正安装程序的部分翻译问题&amp;部分快捷方式的问题
+
 2.0 Alpha版本（开发中）
 1.尝试兼容旧版本
 2.移除旧版本的所有功能
